# angular-bazel-example

./: package.json
project1/: WORKSPACE  package-lock.json
project1/src/: BUILD.bazel
project2/: WORKSPACE  package.json
project2/src/hello-world/: BUILD.bazel  hello-world.component.ts
src/: BUILD.bazel  karma.test.shim.ts
src/hello-world/: BUILD.bazel  hello-world.component.spec.ts
